# TNM094-Particle-System

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
include/example/: randomsystem.h
include/particlesystem/: particlesystem.h
src/application/: main.cpp
src/example/: randomsystem.cpp
src/particlesystem/: particlesystem.cpp
src/rendering/: window.cpp
unittest/: particlesystem-tests.cpp  randomsystem-tests.cpp
